# infidelity-web

./: Cargo.toml  README.md
.github/workflows/: rust.yml
config/: infidelity-web.service
public/: index.html
public/img/: infidelity1.avif  infidelity10.avif  infidelity11.avif  infidelity12.avif  infidelity13.avif  infidelity14.avif  infidelity15.avif  infidelity16.avif  infidelity17.avif  infidelity18.avif  infidelity19.avif  infidelity2.avif  infidelity20.avif  infidelity21.avif  infidelity22.avif  infidelity23.avif  infidelity24.avif  infidelity25.avif  infidelity26.avif  infidelity27.avif  infidelity28.avif  infidelity29.avif  infidelity3.avif  infidelity30.avif  infidelity31.avif  infidelity32.avif  infidelity4.avif  infidelity5.avif  infidelity6.avif  infidelity7.avif  infidelity8.avif  infidelity9.avif
src/: main.rs
