[package]
name = "infidelity-web"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-static = { git = "ssh://git@github.com/wavey-ai/hyper-static" }
env_logger = "0.11.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3.26"
